//*****************************************************************************
/// \copyright (c) 2019,2019 by Körber Pharma Inspection GmbH. All Rights Reserved
/// \file Overlay.proto
/// All Rights Reserved
//*****************************************************************************
/// Protobuf containing messages describing image overlays.
//******************************************************************************

syntax = "proto3";
package SvPb;

option java_package = "de.sdm.svrc.proto.v1010";

import "BasicStructure.proto";

message ValueObject
{
	double value = 1;
	uint32 objectid = 2;
	int32 trPos = 3;	//The position in triggerRecord, but one-based (that mean trPos-1 is the pos in TR) because 0 = default and means not set.
}

message OverlayDesc
{
	repeated Overlay overlays = 1;
}

message Overlay
{
	// Name of the overlay that is also displayed.
	string name = 1;

	uint32 objectid = 2;

	// Hex color as abgr (a = alpha will not used yet)
	ValueObject color = 3;

	// Bounding box of the overlay that introduces a local
	// coordinate system for the shapes, positioning them relative
	// on the image.
	OverlayBoundingShape boundingShape = 4;

	bool displayBounding = 5;

	repeated OverlayShapeGroup shapeGroups = 6;

	//Value if this overlay is from a passed/failed/warned tool. The values are 0(false) or 1 (true)
	ValueObject passed = 7;
	ValueObject failed = 8;
	ValueObject warned = 9;
}

message OverlayBoundingShape
{
	oneof shape
	{
		OverlayShapeRect rect = 1;
		OverlayShapeSlice slice = 2;
		OverlayShape2PointPerspective perspective = 3;
	}
}

enum DetailLevel
{
	MainOverlay = 0;
	Level1 = 1;
	Level2 = 2;
}

message OverlayShapeGroup
{
	string name = 1;
	repeated OverlayShape shapes = 2;
	DetailLevel detailLevel = 3;
}

// Message encapsulating the actual shape in an oneof.
// All Coordinates are represented as relative positions on
// the image, not as pixels. For example, if the image has
// a width of 500px and here you use a w of 0.5, the width
// of the overlay will be 250px.
message OverlayShape
{
	// Hex color as abgr, for overwriting the default color
	// specified in the Overlay message
	ValueObject color = 1;

	oneof shape
	{
		OverlayShapeLine line = 2;
		OverlayShapeRect rect = 3;
		OverlayShapeArrow arrow = 4;
		OverlayShapeRectArray rectArray = 5;
		OverlayShapeMarker marker = 6;
		OverlayShapeMarkerArray markers = 7;
		OverlayShapeBlockMarker blockMarker = 8;
		OverlayShapeGraph graph = 9;
		OverlayShapeImage image = 10;
	}
}

// Line shape with relative x/y for start and end of the line.
message OverlayShapeLine
{
	ValueObject x1 = 1;
	ValueObject y1 = 2;
	ValueObject x2 = 3;
	ValueObject y2 = 4;
}

// Rectangular shape with lower-left anchor represented by x/y
// and width and height (w/h).
message OverlayShapeRect
{
	ValueObject x = 1;
	ValueObject y = 2;
	ValueObject w = 3;
	ValueObject h = 4;
	ValueObject angle = 5;
}

message OverlayShapeSlice
{
	ValueObject centerX = 1;
	ValueObject centerY = 2;
	ValueObject startAngle = 3;
	ValueObject endAngle = 4;
	ValueObject innerRadius = 5;
	ValueObject outerRadius = 6;
}

message OverlayShape2PointPerspective
{
	ValueObject offset = 1;
	Orientation orientation = 2;
}

// Like shape line with an additional arrow placed at second point.
message OverlayShapeArrow
{
	ValueObject x1 = 1;
	ValueObject y1 = 2;
	ValueObject x2 = 3;
	ValueObject y2 = 4;
}

message RectData
{
	double x = 1;
	double y = 2;
	double w = 3;
	double h = 4;
	double angle = 5;
}

//This message is for rectArray data from SVObserver for x1/y1 x2/y2 without rotation (needed e.g. for blob boxes)
message SVORectArray12Data
{
	//The position in triggerRecord, but one-based (that mean trPos-1 is the pos in TR) because 0 = default and means not set.
	int32 x1TrPos = 1;
	int32 y1TrPos = 2;
	int32 x2TrPos = 3;
	int32 y2TrPos = 4;
}

//This message is for rectArray data from SVObserver for pattern x/y and angle is for all rects variable. Width and Height is the same for all.
message SVORectArrayPatternData
{
	//The position in triggerRecord, but one-based (that mean trPos-1 is the pos in TR) because 0 = default and means not set.
	int32 xTrPos = 1; //array value
	int32 yTrPos = 2; //array value
	int32 angleTrPos = 3; //array value
	int32 width = 4; //only single value
	int32 height = 5; //only single value
	int32 centerX = 6; //only single value
	int32 centerY = 7; //only single value
	double centerAngle = 8; //only single value
	double centerRadius = 9; //only single value
	int32 numberPos = 10; //number of patterns found
}

// An Array of rectangular shape.
message OverlayShapeRectArray
{
	repeated RectData rectArray = 1;

	oneof SVOData
	{
		SVORectArray12Data x12Data = 2;
		SVORectArrayPatternData patternData = 3;
	}
}

enum Orientation
{
	x = 0;
	y = 1;
}

enum Size
{
	Full = 0;	//Marker is over the whole overlay
	MidShort = 1; //Marker is a short marker in the middle of the overlay.
}

message SVOSelectedMarker
{
enum  PosType
{
First = 0;
Last = 1;
This = 2;
}

PosType type = 1;
double pos = 2;
bool fromLast = 3;
int32 trPos_EdgeData = 6; //position of the edgeData
}

message OverlayShapeMarker
{
	double minValue = 1;
	double maxValue = 2;
	ValueObject value = 3;
	Orientation orientationType = 4;
	Size sizeType = 5;
	
	oneof SVOData
	{
		SVOSelectedMarker selectedMarkerData = 6;
	}
}

message OverlayShapeMarkerArray
{
	double minValue = 1;
	double maxValue = 2;
	repeated double value = 3;
	Orientation orientationType = 4;
	Size sizeType = 5;
	int32 trPos = 6;
}

message OverlayShapeBlockMarker
{
	//This Block marker start with the first pixel with the first color. At the position changePos[0] it changes to the next color and so on.
	repeated uint32 colors = 1;
	repeated int32 changePos = 2;	
	Orientation orientationType = 4;
	
	oneof DataType
	{
		int32 PixelCountingAnalyzerResultPos = 3;
	}
}

message OverlayShapeGraph
{
	double minValueX = 1;
	double maxValueX = 2;
	repeated double x = 3;
	double minValueY = 4;
	double maxValueY = 5;
	repeated double y = 6;

	int32 trPosX = 7;
	int32 trPosY = 8;
}

// Same logic that also applies to OverlayShapeRect, but instead of
// drawing a rectangle, the embedded image is drawn.
message OverlayShapeImage
{
	ValueObject x = 1;
	ValueObject y = 2;
	ValueObject w = 3;
	ValueObject h = 4;
	Image image = 5;
	oneof DataType
	{
		OverlayShapeImageDynamic imageDymData = 6;
	}
}

message OverlayShapeImageDynamic
{
	int32 trPosImage = 1;
	oneof Values
	{
		int32 NonBlack = 2;//alpha/blue/green/red
		int32 Black = 3;//alpha/blue/green/red
	}
}